--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/climateviewdb
 spring.datasource.username=root
-spring.datasource.password=seonsalasana
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=update 
+#spring.jpa.hibernate.ddl-auto=update 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 jwt.secret=asdf244jlkjsrasraljsalja
